# EPIC-SHARC-MOHTE

./: ARCHITECTUREOVERVIEW.md  ArchitectureComparison.md  COMMERCIAL.md  CONTRIBUTING.md  CoverageConfigNotes.md  LICENSE  LICENSES.md  README.md  __init__.py  __main__.py  cli.py  compare_generation_ablation.py  config.py  data.py  gui.py  hierarchical_precision.py  model.py  muon_optim.py  pretokenize.py  quantization.py  requirements.txt  setup.cfg  tiny_overfit.py  tiny_training_matrix.py  train.py  ui.bat
demo/: pretokenizedemo.md
demo/corpus/: tiny_example.txt
epic_sharc_mohte/: __init__.py  __main__.py  cli.py  gui.py
epic_sharc_mohte.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: __init__.py  test_hierarchical_precision.py  test_smoke.py
