[metadata]
name = epic-sharc-mohte
version = 0.1.0
description = EPIC-SHARC MOHTE standalone prototype
long_description = file: README.md
long_description_content_type = text/markdown
license = AGPL-3.0-or-later

[options]
python_requires = >=3.10
include_package_data = True
py_modules =
    cli
    compare_generation_ablation
    config
    data
    gui
    hierarchical_precision
    model
    muon_optim
    pretokenize
    quantization
    train
install_requires =
    numpy
    torch

[options.packages.find]
include =
    epic_sharc_mohte

[options.entry_points]
console_scripts =
    epic-sharc-mohte = cli:main
    epic-sharc-mohte-gui = gui:main

